--- a/proposal.tex
+++ b/proposal.tex
@@ -8,77 +8,24 @@
 \date{\today}
 \setlength{\parskip}{11pt}
 \setlength{\parindent}{0pt}
-\setcounter{secnumdepth}{-2}
 \titleformat*{\subsection}{\normalsize\bfseries\itshape}
 \begin{document}
 \maketitle
-\section{Overview}
-\begin{comment}
-  Related challenges
-     - Information retrieval
-     - Topic extraction (and ontology relationship detection)
-     - Named entity recognition
-     - Word-sense disambiguation
-     - Feature selection for active learning.
+\section{Introduction}
+The BBC's \textit{Redux} (\cite{Butterworth2008}) and \textit{World Service Archive} (\cite{Raimond}) projects are large archives of audiovisual material (along with transcripts and descriptive text) with tremendous value to programme-makers and researchers both within the BBC and further afield. However, effective search and discovery within the archive is often hampered by the relative sparsity of semantic metadata describing the items in the archive, their topics and relationships. Due to the size of the archives, manual annotation of each item by professional archivists or subject experts would be prohibitively time-consuming and expensive. There are many existing approaches to automatically identifying topics and relationships in large text corpora in the machine learning literature. Howerver, traditional supervised learning approaches require an authoratitive source of ground truth labels for a subset of the corpus in the form of a training set - the manual preparation of which can also be expensive and time consuming.
 
-  Lines of enquiry
-  - Suitable models
-  - Suitable query strategies and error / uncertainty measures
-  - Methods of incorporating outside knowledge
-  - Feature selection for AL on broadcast archives
-  - Methods of incorporating visual / audible features, or feeding back into transcription process
+We proposes an \textit{Active learning} approach (\cite{Settles2012}) to this task, which leverages the fact that the users of this system are, in general, qualified to perform this annotation themselves (for topics within their area of interest). By    interactively querying the user for ground-truth labels related to their own topic of interest, this approach would assist users with their immediate information retrieval needs by learning a relevance metric for their particular query, while also making use of the same ground-truth labels to build a general topic model of the entire archive for use in future retrieval tasks.
 
-  Evaluation of existing algorithms and models in broadcast archive setting.
-  Improvement of existing results by incorporating structured background knowledge
-  Investigation of Human Computer Interaction and IR challenges related to active learning
-\end{comment}
-Active learning (\cite{Settles2010}) refers to a set of learning algorithms which are able to choose the labelled examples on which they are trained, by querying a human operator with a chosen example, and receiving a label.
-
-Active learning is a particularly useful strategy for applications where the cost of producing a labelled training set of sufficient size to learn effectively makes more traditional supervised learning approaches impractical.
-
-As a case in point, large archives of audiovisual and textual information, such as those held by broadcasters and media organisations are often sparsely populated with useful semantic metadata, due to the prohibitive cost of annotation by a professional researcher or archivist (\cite{Raimond}).
-
-The BBC is one organisation in particular which faces this problem. The World Service archive (\cite{Raimond}) and BBC Redux (\cite{Butterworth2008}) both provide a large and valuable resource for programme makers and researchers both inside and outside the organisation. The data team in the BBC Research and Development department have been actively researching novel techniques for concept tagging, document linking and other forms of semantic annotation, with the aim of making these archives more easily navigable and searchable. This work has included the use of Topic-based Vector Space Models augmented with a hierarchical topic model for automated concept tagging (\cite{Raimond2012}) and document linking (\cite{Raimond2013}).
-
-However, little research has been done so far on active learning as a strategy for solving these annotation challenges in this context. Given that many of the users of these archives are themselves skilled researchers and subject specialists, active learning provides a potentially significant advantage over unsupervised approaches, as it, by definition, leverages this knowledge on the part of the user in order to better classify the archived documents, without the costs of a traditional supervised classification approach.
-
-As such, we propose that BBC Redux and the World Service Archive would constitute excellent corpora on which to perform extensive empirical research on the use of active learning for to address information retrieval challenges in the use of large media archives, in particular the need for annotation with accurate, rich semantic metadata.
-
+This project would build upon existing work in the field of active learning, natural language processing and topic modelling (reviewed in section \ref{sec:Related work}), developing a novel approach to topic-based information retrieval in large media archives with wider applications to fields such as E-discovery for the legal profession, and computer-assisted reporting. In addition, we are confident that the properties of this particular use case would serve to motivate research which would constitute an original contribution to the machine learning and natural language processing literature (discussed in more detail in section \ref{sec:Methodology}).
 \section{Background}
-Active learning (or \textit{query learning}) has been successfully applied to
+The challenge of automatically annotating documents with structured semantic metadata has been addressed in previous projects by BBC Research and Development, including work on automated concept tagging and  document linking. However, to date, this work has consisted of using supervised learning models which require a training set which must be compiled by hand in advance (as in \cite{Raimond2013}), or substituted by some heuristic or external source of information which serves as a suitable proxy for ground truth (as in \cite{Raimond2012}).
+
+Given that a large proportion of the users of the BBC Redux and World Service Archive systems are journalists, researchers and programme makers with a significant degree of knowledge around the topics of the programmes that they are seeking, it would be advantageous to leverage this knowledge in identifying topic structure within the corpus. Active learning provides a principled framework for this, by allowing a model to be incrementally trained by querying a human oracle for ground-truth classifications of documents from the corpus.
+
+This approach has already been used with some succcess on related information retrieval problems. \cite{Lang1995} describes a use of an actively learnt model based on the minial description length principle to perform content-based filtering and recommendation on a corpus of Usenet posts, and reports an improvement in precision over TF-IDF (a modified version of which was used in \cite{Raimond2012}). In addition, \cite{MacCallum1998}
 \section{Methodology}
-This thesis would provide a large-scale empirical evaluation of the use of active learning for semantic annotation in the BBC's Redux and World Service archive, and its effectiveness in solving information retrieval challenges for the users of these services. This would include:
-
-\subsection{Evaluation of existing active learning approaches for information retrieval in the BBC's Archive}
-
-A thorough, empirical analysis of the effectiveness of active learning techniques already published in the literature, including a comprehensive appraisal of different query strategies and error measures.
-
-Appraisal of active learning vs passive supervised techniques WRT number of examples needed to achieve given epsilon
-
-\subsection{Advancing the state-of-the-art in active learning for text classification, topic modelling and related natural language processing challenges}
-
-The development of novel approaches, with a focus on active learning of parameters of probabilistic topic models.
-
-\subsection{Development of methods for incorporating prior knowledge into the active learning framework}
-
-With a focus on relational and heirarchical topic information, ontologies, semantic web
-
-\subsection{Investigation of human-computer interaction challenges related to active learning}
-
-Within the context of IR.
-
-\begin{comment}
-  Hi there James,
-
-Thanks very much for passing your details on! I'm currently working on a PhD proposal, which, if all goes to plan, I'm hoping to begin researching in September. My proposed thesis title is "Active learning for semantic annotation of large media archives, in the presence of structured background knowledge", and I have some tentative ideas about how my research might prove useful for journalists, on which I'd love to hear your thoughts!
-
-Being as brief as I can, my proposal outlines a novel approach to the categorisation of large archives of textual information, and the annotation of it with semantic metadata (think topics, locations, people and events mentioned or described). Common supervised machine learning approaches to this problem require a 'training set' of information, manually annotated with ground-truth labels on which to train a model. However, in many cases, it can be incredibly costly to produce such a training set - given that a subject expert, archivist or researcher must manually label a (normally large) number of training examples.
-
-Active learning (also known as query learning) offers an alternative approach to supervised classification problems such as this - instead of requiring a large pre-annotated training set, an active algorithm is trained from an un-annotated set of examples, and interactively queries a human operator for ground-truth labels on those examples it judges to be most significant to the model. Existing empirical results suggest that active algorithms offer an improvement over traditional 'batch' supervised learning in terms of the number of labelled examples needed to reach a given level of predictive accuracy, in many contexts.
-
-I'm proposing to study the use of active learning to solve information retrieval problems in broadcasting - specifically by applying techniques from active learning to the problems faced by researchers and journalists using the BBC's archive of broadcasted video and audio. (I've worked with the BBC professionally on this system and am hoping to spin my work out into a topic for research!). Basically, the BBC has a very large online archive of all broadcasted material, which is used by researchers internally to find existing media which is relevant to some area of interest, such as the subject of a new documentary programme. however, while we have text transcriptions of most of the archive, which facilitates searching by terms mentioned in a programme, there is only very sparse coverage of semantic metadata related to programmes - specific people featured, locations depicted, events or topics mentioned, or time-frames covered.
-
-This sort of metadata is invaluable for discovery purposes, as, combined with knowledge about the relationships between the entities described by the metadata, it admits both improved recall when searching for specific topics (a search for "First World War", should include results mentioning "Passchendaele",even if the phrase "First World War" is not explicitly mentioned), and richer means of navigating through the archive (For instance, navigating from programmes about the First World War to programmes about events which occurred concurrently with it, or drilling down into programmes about specific events like "Armistice day", or people, such as "Gavrilo Princip").
-\end{comment}
+\label{sec:Methodology}
+\section{Related work}
+\label{sec:Related work}
 \printbibliography
 \end{document}
