final version of initial proposal

--- a/proposal.tex
+++ b/proposal.tex
@@ -11,44 +11,54 @@
 \titleformat*{\subsection}{\normalsize\itshape}
 \begin{document}
 \maketitle
+\begin{abstract}
+  This document proposes a novel approach to topic classification within archives of textual and audiovisual material. By applying an active learning approach to training a relational model, it leverages both the structure of the topic space and the knowledge of users of the archive in order to better model the allocation of documents to topics and the relationships between documents.
+\end{abstract}
 \section{Introduction}
-The BBC's \textit{Redux} (\cite{Butterworth2008}) and \textit{World Service Archive} (\cite{Raimond}) projects are large archives of audiovisual material (along with transcripts and descriptive text) with tremendous value to programme-makers and researchers both within the BBC and further afield. However, effective search and discovery within the archive is often hampered by the relative sparsity of semantic metadata describing the items in the archive, their topics and relationships. Due to the size of the archives, manual annotation of each item by professional archivists or subject experts would be prohibitively time-consuming and expensive. There are many existing approaches to automatically identifying topics and relationships in large text corpora in the machine learning literature. Howerver, traditional supervised learning approaches require an authoratitive source of ground truth labels for a subset of the corpus in the form of a training set - the manual preparation of which can also be expensive and time consuming.
+The BBC's \textit{Redux} (\cite{Butterworth2008}) and \textit{World Service Archive} (\cite{Raimond}) projects are large archives of audiovisual material (along with transcripts and descriptive text) with tremendous value to programme-makers and researchers both within the BBC and further afield. However, effective search and discovery within the archive is often hampered by the relative sparsity of semantic metadata describing the items in the archive, their topics, and relationships. Due to the size of the archives, manual annotation of each item by professional archivists or subject experts would be prohibitively time-consuming and expensive. There are many existing approaches to automatically identifying topics and relationships in large text corpora in the machine learning literature. However, traditional supervised learning approaches require an authoritative source of ground truth labels for a subset of the corpus, in the form of a training set - the manual preparation of which can also be expensive and time consuming.
 
-We proposes an \textit{Active learning} approach (\cite{Settles2012}) to this task, which leverages the fact that the users of this system are, in general, qualified to perform this annotation themselves (for topics within their area of interest). By    interactively querying the user for ground-truth labels related to their own topic of interest, this approach would assist users with their immediate information retrieval needs by learning a relevance metric for their particular query, while also making use of the same ground-truth labels to build a general topic model of the entire archive for use in future retrieval tasks.
+We propose an \textit{Active learning} approach (\cite{Settles2012}) to this task, which leverages the fact that the users of this system are, in general, qualified to perform this annotation themselves (for topics within their area of interest). By interactively querying the user for ground-truth labels related to their own topic of interest, this approach would assist users with their immediate information retrieval needs by learning a relevance metric for their particular query, while also making use of the same ground-truth labels to build a general topic model of the entire archive for use in future retrieval tasks. More specifically, we will focus on learning within topic spaces which have some existing, known structure, in the form of relations or hierarchies.
 
-This project would build upon existing work in the field of active learning, natural language processing and topic modelling (reviewed in section \ref{sec:Related work}), developing a novel approach to topic-based information retrieval in large media archives with wider applications to fields such as E-discovery for the legal profession, and computer-assisted reporting. In addition, we are confident that the properties of this particular use case would serve to motivate research which would constitute an original contribution to the machine learning and natural language processing literature (discussed in more detail in section \ref{sec:Methodology}).
+This project would build upon existing work in the field of active learning, natural language processing and topic modelling (reviewed in section \ref{sec:Related work}) to develop a novel active-learning approach to inference in topic models possessing some known inter-topic structure, motivated by the specific challenges encountered by users of the BBC Redux and World Service Archives.
+
+This contribution would also have immediate practical application for users of the BBC's archive (and related projects such as the effort to semantically annotate news articles described in \cite{Shearer}), as well as wider applications to fields such as E-discovery for the legal profession, computer-assisted reporting, and more generally, any information retrieval task concerning a structured ontology of topics.
+
 \section{Background}
 \label{sec:Background}
-The challenge of automatically annotating documents with structured semantic metadata has been addressed in previous projects by BBC Research and Development, including work on automated concept tagging and  document linking. However, to date, this work has consisted of using supervised learning models which require a training set which must be compiled by hand in advance (as in \cite{Raimond2013}), or substituted by some heuristic or external source of information which serves as a suitable proxy for ground truth (as in \cite{Raimond2012}).
+The challenge of automatically annotating documents with structured semantic metadata has been addressed in previous projects by BBC Research and Development, including work on automated concept tagging and  document linking. However, to date, this work has consisted of using supervised learning models which require a training set which must be compiled by hand in advance, or substituted by some heuristic or external source of information which serves as a suitable proxy for ground truth (as in \cite{Raimond2012}).
 
 Given that a large proportion of the users of the BBC Redux and World Service Archive systems are journalists, researchers and programme makers with a significant degree of knowledge around the topics of the programmes that they are seeking, it would be advantageous to leverage this knowledge in identifying topic structure within the corpus. Active learning provides a principled framework for this, by allowing a model to be incrementally trained by querying a human oracle for ground-truth classifications of documents from the corpus.
 
-This approach has already been used with some succcess on related information retrieval problems. \cite{Lang1995} describes a use of an actively learnt model based on the minial description length principle to perform content-based filtering and recommendation on a corpus of Usenet posts, and reports an improvement in precision over TF-IDF (a modified version of which was used in \cite{Raimond2012}). In addition, \cite{McCallum1998} describes a novel use of Active learning to imporove the accuracy of a naive Bayes classifier where pre-labelled training data is sparse.
+This approach has already been used with some success on related information retrieval problems. \cite{Lang1995} describes a use of an actively learnt model based on the minimal description length principle to perform content-based filtering and recommendation on a corpus of Usenet posts, and reports an improvement in precision over TF-IDF (a modified version of which was used in \cite{Raimond2012}). In addition, \cite{McCallum1998} describes a novel use of active learning to improve the accuracy of a naive Bayes classifier where prelabelled training data is sparse.
 
-We propose to build upon these techniques (and further related work described in section \ref{sef:Related work}) in order
+We propose to build upon these techniques (and further related work described in section \ref{sec:Related work}), incorporating techniques from statistical relational learning (\cite{Getoor2007}) in order to devise a novel method for active learning of hierarchical or relational structured topic models.
+
 \section{Methodology}
-
+\label{sec:Methodology}
 This thesis would provide a large-scale empirical evaluation of the use of active learning for semantic annotation in the BBC's Redux and World Service archive, and its effectiveness in solving information retrieval challenges for the users of these services. This would include:
 
 \subsection{Evaluation of existing active learning approaches for information retrieval in the BBC's Archive}
 
-A thorough, empirical analysis of the effectiveness of active learning techniques already published in the literature, including a comprehensive appraisal of different query strategies and error measures.
-
-Appraisal of active learning vs passive supervised techniques WRT number of examples needed to achieve given epsilon
+A thorough, empirical analysis of the effectiveness of active learning techniques already published in the literature, including a comprehensive appraisal of different query strategies and error measures, as well as a comparison to established (passive) supervised and semi-supervised learning algorithms. An overview of some of the techniques to be evaluated is given in section \ref{sec:Related work}.
 
 \subsection{Advancing the state-of-the-art in active learning for text classification, topic modelling and related natural language processing challenges}
 
-The development of novel approaches, with a focus on active learning of parameters of probabilistic topic models.
+We will use the use-case of the BBC archives to motivate further advances in active learning for topic modelling, focusing on probabilistic models which incorporate some known structure over the topic space. For example, we will investigate active methods of performing inference for the parameters of topic models such as Latent Dirichlet Allocation (\cite{Blei2003}) and related extensions which model topic hierarchies (\cite{Blei2003a}), Gaussian Process Topic Models (\cite{Agovic2012}), and statistical relational models such as Markov Logic Networks (\cite{Domingos2007}).
 
-\subsection{Development of methods for incorporating prior knowledge into the active learning framework}
-
-With a focus on relational and heirarchical topic information, ontologies, semantic web
+By combining active learning approaches to inference with models that reflect the structure of the topic space in question, we hope to make a novel contribution to the field of automated topic modelling and classification. Specific approaches could include the use of query-by-committee (\cite{Argamon-Engelson2011a}) to estimate classification variance in a model where computing such statistics directly would be intractable (as described for naive-Bayes classifiers in \cite{McCallum1998}), combining active learning with complementary semi-supervised and unsupervised learning techniques, and the use of active learning to infer a topic distribution over documents, by defining a topic model over users of the system and propagating this to documents via their training decisions.
 
 \subsection{Investigation of human-computer interaction challenges related to active learning}
 
-Within the context of IR.
-\label{sec:Methodology}
+The use of machine learning techniques for information retrieval tasks poses specific challenges in terms of user interface design and human computer interaction (\cite{Brajnik1990}). Active learning, in particular, leads to a specific set of interaction and interface design trade-offs (\cite{Rubens2011}). An active learning system, used for real-world information retrieval tasks (as we are proposing) would provide an excellent test subject for further research into user interface issues related to active learning, and particularly active learning approaches to text classification, search and topic modelling; an area which has not yet been examined in detail in the HCI literature. In particular, we propose examining approaches to the new user problem (\cite{Rashid2002}) in relation to active learning, as well as methods of modelling the effort needed to label a given document, in order to optimise an active learning system to jointly minimise classification error and user effort expended on labelling tasks. (\cite{Settles2008a}).
 \section{Related work}
 \label{sec:Related work}
+
+Active learning (and specifically active learning for natural-language processing) is a well-studied and active area of research. In particular, advances have been made in the use of active learning for classification tasks with a variety of model classes, including naive Bayes classifiers (\cite{McCallum1998}) and SVMs (\cite{Tong2002}), as well as named entity recognition (\cite{Olsson2008}) and word-sense disambiguation (\cite{Fujii1998}). A broad overview of the active learning literature is given by (\cite{Settles2010}), and a more specific review of literature related to active learning for NLP is given by (\cite{Olsson2009}). More generally, active learning has been used successfully to estimate the parameters of families of probabilistic model of use in a natural language processing context, including HMMs (\cite{Argamon-Engelson2011a}) and conditional random fields (\cite{Settles2008} and \cite{Olsson2008}).
+
+Of particular relevance is existing work which leverages existing domain knowledge in the task of learning a topic model. \cite{Andrzejewski2010} describes several extensions to the Latent Dirichlet Allocation topic model which do exactly this, and which could be built upon to derive analogous active learning approaches. In addition, existing approaches which treat individual users of an active learning system as draws from a probability distribution, most notably \cite{Sheng2008}'s work on learning with multiple noisy oracles offer a useful stating point for research on modelling the interests users of an active learning system as a probabilistic topic model.
+
+In addition, there is a large body of existing work on statistical topic models which incorporate some sort of topic structure. \cite{Blei2003a} extends the LDA model to incorporate hierarchies of topics, while \cite{Agovic2012} models covariances between individual topics through the use of Gaussian processes. The field of statistical relational learning (\cite{Getoor2007}) also potentially offers a large amount of useful background on modelling richly structured topic ontologies around documents, including Bayesian logic programs (\cite{Brech}), Relational dependency networks (\cite{Neville2007}) and Markov logic networks (\cite{Domingos2007}). In particular, \cite{Fischer2011} describes how relational learning can be used for incorporating background knowledge into semantic web data mining tasks. \cite{Thompson1999} describes an active approach to information extraction based on inductive logic, which would provide a useful starting point for further research into active learning for relational models.
+
+The HCI and Information Retrieval literature also includes a number of works which are of interest, most notably \cite{Chang2009}'s research into human interpretations of probabilistic topic models (the effects of which are particularly pertinent in an active learning context), as well as \cite{Rashid2002}'s work on the new user problem in recommender systems. In addition, there is a large amount of research on \textit{relevance feedback} (\cite{Koenemann1996}) in the information retrieval literature which is relevant to the challenge of actively training a topic model. In particular one potentially fruitful avenue of research could involve investigating the use of implicit feedback from a user's behaviour after performing a query, analogous to that described in \cite{Kelly2001}.
 \printbibliography
 \end{document}
